add support for non-swarm environments

--- a/templates/config/docker.config.html
+++ b/templates/config/docker.config.html
@@ -19,6 +19,12 @@
                    {% if value != None %}value="{{ value }}"{% endif %}>
         </div>
     {% endfor %}
+        {% set use_swarm = get_config('whale:docker_use_swarm') %}
+        <div class="form-check">
+            <input type="checkbox" id="docker-use-swarm" name="whale:docker_use_swarm"
+                   {% if docker_use_swarm == True %}checked{% endif %}>
+            <label for="docker-use-swarm">Use Swarm</label>
+        </div>
         {% set use_ssl = get_config('whale:docker_use_ssl') %}
         <div class="form-check">
             <input type="checkbox" id="docker-use-ssl" name="whale:docker_use_ssl"
